# justfixed

./: .gitignore  CLAUDE.md  build.py  justfixed.spec  pyproject.toml  version_info.txt
alembic/: env.py
alembic/versions/: 0b6d840dde1a_add_normalized_name_column_to_issuers.py  12ea4180dee3_add_source_column_to_investments.py  8010f6133718_add_curation_memory_table.py  a3a0d2b508f9_initial_schema_with_issuers_and_.py
assets/: README.md
docs/: ARCHITECTURE.md  BUILD.md  CALENDAR_EXPORT_DESIGN.md  CONFORMANCE.md  DEV_ROUTINE.md  FGC_DESIGN.md  METHODOLOGY.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  UI_DESIGN.md
installer/: justfixed.iss
src/justfixed/: _build_info.py
tests/: test_build_info.py
tests/conformance/: test_external_oracles.py
tests/domain/: test_investment.py  test_issuer.py  test_issuer_normalization.py  test_money.py  test_product.py  test_rates.py
tests/engine/: test_accrual.py  test_back_solve.py  test_breakeven.py  test_calendar.py  test_cashflow.py  test_conglomerate_report.py  test_curve.py  test_curve_provenance_wiring.py  test_fetcher.py  test_fgc.py  test_per_flow_tax.py  test_projection.py  test_seed.py  test_tax.py  test_trace.py
tests/exports/: test_calendar.py  test_xlsx.py
tests/importers/: __init__.py  test_bb.py  test_bb_loader.py  test_bb_mapper.py  test_btg_loader.py  test_btg_mapper.py  test_btg_parser.py  test_detection.py  test_kind_catalog.py  test_parsing_utils.py  test_provenance.py  test_xp_loader.py  test_xp_mapper.py  (+1 more)
tools/: generate_placeholder_icon.py  publish_curves.py  reproduce_trace.py
(+77 files in other folders)
