[project]
name = "justfixed"
version = "0.1.0"
description = "Brazilian fixed-income portfolio tracker"
requires-python = ">=3.13,<3.14"
dependencies = [
    "PySide6>=6.10,<6.12",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "openpyxl>=3.1,<4.0",
    "bizdays>=1.0,<2.0",
    "icalendar>=6.0,<7",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
